--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Fragment+Mono&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -8,6 +9,8 @@ body {
     width: 100%;
     height: 100%;
     color: white;
+    font-family: 'Fragment Mono', monospace;
+    overflow: hidden;
 }
 
 html {
@@ -62,4 +65,26 @@ html {
     text-indent:-99999em;
     width:220px; /* your image width */
     overflow:hidden;
+}
+
+.flexCont {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#restartBtn {
+    margin-top: 0.5rem;
+    width: 100px;
+    background-color: transparent;
+    color: white;
+    font-family: 'Fragment Mono', monospace;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+#statusText {
+    color: greenyellow;
 }
