--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,8 @@ html {
 }
 
 .cell {
-  width: 220px;
-  height: 220px;
+  width: 20vh;
+  height: 20vh;
   line-height: 75px;
   font-size: 100px;
   cursor: pointer;
@@ -84,4 +84,24 @@ html {
 
 #statusText {
   color: greenyellow;
+}
+
+.message {
+  display: none;
+  justify-content: center;
+  margin-top: 50%;
+  font-size: 2rem;
+  color: red;
+  background-color: black;
+}
+
+@media (max-width: 900px) {
+  .message {
+    display: flex;
+    justify-content: center;
+    margin-top: 50%;
+    font-size: 2rem;
+    color: red;
+    background-color: black;
+  }
 }/*# sourceMappingURL=main.css.map */
